--- a/CoolWeacher/app/build.gradle
+++ b/CoolWeacher/app/build.gradle
@@ -20,5 +20,10 @@ android {
 }
 
 dependencies {
+	compile 'com.android.support:appcompat-v7:+'
+	compile 'org.litepal.android:core:1.3.2'
+	compile 'com.squareup.okhttp3:okhttp:3.4.1'
+	compile 'com.google.code.gson:gson:2.7'
+	compile 'com.github.bumptech.glide:glide:+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
